# file-lock-checker

./: .gitignore  Cargo.toml  README.md  build.rs  install_context_menu.bat  lock_test.py  uninstall_context_menu.bat
.github/workflows/: ci.yaml  release.yml
res/: app.rc
src/: commands.rs  context_menu.rs  main.rs  process.rs  registry.rs  types.rs  utils.rs
