[package]
name = "file-lock-checker"
version = "1.0.0"
edition = "2024"
authors = ["Phumin Maliwan <kliop2317@gmail.com>"]
description = "A Windows file lock checker and unlock utility"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mantvmass/file-lock-checker"
keywords = ["windows", "file", "lock", "process", "unlock"]
categories = ["command-line-utilities", "os::windows-apis"]

# กำหนดให้ build เป็น Windows executable เท่านั้น
[target.'cfg(windows)']

[dependencies]
winapi = { version = "0.3.9", features = [
    "handleapi",           # CloseHandle, INVALID_HANDLE_VALUE
    "processthreadsapi",   # OpenProcess, TerminateProcess, GetCurrentProcess
    "psapi",               # EnumProcesses, GetModuleBaseNameW, GetProcessImageFileNameW
    "restartmanager",      # RmStartSession, RmEndSession, RmRegisterResources, RmGetList
    "winnt",               # PROCESS_* constants, HANDLE
    "minwindef",           # DWORD, FALSE, TRUE
    "ntdef",               # HANDLE definition
    "winreg",              # Registry functions
    "winnt",               # Registry constants
    "winerror",            # ERROR_MORE_DATA และ error constants อื่นๆ
    "winuser"              # (optional สำหรับ UI features ในอนาคต)
] }
chrono = "0.4.41"

# # Windows specific build settings
# [target.'cfg(windows)'.build-dependencies]
# winres = "0.1"  # สำหรับ embedding Windows resources (icon, version info)

# # Build script สำหรับ Windows resources
# [[bin]]
# name = "file-lock-checker"
# path = "src/main.rs"

# Metadata สำหรับ Windows executable
[package.metadata.winres]
ProductName = "File Lock Checker"
FileDescription = "Windows file lock detection and unlock utility"
LegalCopyright = "Copyright (c) 2025 Phumin Maliwan"
ProductVersion = "1.0.0"
FileVersion = "1.0.0"