[package]
name = "file-lock-checker"
version = "1.0.0"
edition = "2024"
authors = ["Phumin Maliwan <kliop2317@gmail.com>"]
description = "A Windows file lock checker and unlock utility"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mantvmass/file-lock-checker"
keywords = ["windows", "file", "lock", "process", "unlock"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
winapi = { version = "0.3.9", features = [
    "handleapi",         # CloseHandle, INVALID_HANDLE_VALUE
    "processthreadsapi", # OpenProcess, TerminateProcess, GetCurrentProcess
    "psapi",             # EnumProcesses, GetModuleBaseNameW, GetProcessImageFileNameW
    "restartmanager",    # RmStartSession, RmEndSession, RmRegisterResources, RmGetList
    "winnt",             # PROCESS_* constants, HANDLE
    "minwindef",         # DWORD, FALSE, TRUE
    "ntdef",             # HANDLE definition
    "winreg",            # Registry functions
    "winerror",          # ERROR_MORE_DATA และ error constants อื่นๆ
    "winuser",           # (optional สำหรับ UI features ในอนาคต)
] }
chrono = "0.4.41"

[build-dependencies]
embed-resource = "3.0.6"
cargo_toml = "0.22.3"